--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clickhouse/client": "^1.11.0",
+    "autoprefixer": "^10.4.21",
+    "clickhouse": "^2.6.0",
+    "csv-parser": "^3.2.0",
+    "dotenv": "^16.5.0",
+    "multer": "^1.4.5-lts.2",
+    "next": "15.3.0",
+    "papaparse": "^5.5.2",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.0"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4.1.4"
   }
 }
